# izel

./: .gitattributes  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  Izel.toml  README.md
.cargo/: config.toml
compiler/: izelc.iz  lexer.iz  parser.iz
crates/izel_ast_lower/: Cargo.toml
crates/izel_ast_lower/src/: elaboration.rs  lib.rs
crates/izel_ast_lower/tests/: test_ast.rs
crates/izel_borrow/: Cargo.toml
crates/izel_borrow/src/: lib.rs
crates/izel_codegen/: Cargo.toml
crates/izel_codegen/src/: lib.rs
crates/izel_diagnostics/: Cargo.toml
crates/izel_driver/: Cargo.toml
crates/izel_driver/src/: main.rs
crates/izel_driver/tests/: test_driver.rs  test_driver_runtime_io.rs
crates/izel_driver/tests/fixtures/: custom_witness.iz
crates/izel_fmt/: Cargo.toml
crates/izel_fmt/src/: formatter.rs  lib.rs
crates/izel_hir/: Cargo.toml
crates/izel_hir/src/: lib.rs  lower.rs
crates/izel_hir/tests/: test_hir.rs
crates/izel_lexer/: Cargo.toml
crates/izel_lexer/src/: cursor.rs  lexer.rs  lib.rs
crates/izel_lsp/: Cargo.toml
crates/izel_lsp/src/: lib.rs
crates/izel_mir/: Cargo.toml
crates/izel_mir/src/: lib.rs  lower.rs  optim.rs
crates/izel_parser/src/: ast.rs  contracts.rs  cst.rs  eval.rs  expr.rs  lib.rs
crates/izel_parser/tests/: test_ast.rs  test_corpus.rs  test_parser.rs
crates/izel_pm/: Cargo.toml
crates/izel_pm/src/: lib.rs  main.rs  manifest.rs  resolve.rs
crates/izel_pm/tests/: test_pm_cli.rs
crates/izel_resolve/: Cargo.toml
crates/izel_resolve/src/: lib.rs
crates/izel_session/: Cargo.toml
crates/izel_session/src/: lib.rs
crates/izel_span/src/: lib.rs
crates/izel_std/src/: lib.rs
crates/izel_typeck/: Cargo.toml
crates/izel_typeck/src/: contracts.rs  eval.rs  lib.rs  type_system.rs
docs/: checklist.md  po_checklist.md  project_overview.md  tests_checklist.md
docs/book/: 00-intro.md  01-getting-started.md  02-ownership.md  03-types.md  04-effects.md  05-witnesses.md  06-zones.md  07-concurrency.md  08-ffi.md  09-sample-applications.md  concurrency.md  effects.md  intro.md  macros.md  witnesses.md
docs/spec/: 01-lexical.md  02-syntax.md  03-types.md  04-effects.md  05-memory.md  06-witnesses.md  07-contracts.md  08-zones.md  09-duality.md  appendix-a-grammar.md  appendix-b-keywords.md  appendix-c-stdlib.md  duality.md  effects.md  intro.md  memory_zones.md
examples/: async_test.iz  borrow_error.iz  cascade_errors.iz  collections_test.iz  contracts_valid.iz  duality_types.iz  effect_test.iz  effects.iz  effects_valid.iz  getting_started.iz  hello.iz  move_error.iz  test_effects.iz  test_syntax.iz  traits_test.iz  witness_builtins.iz  witness_valid.iz  zones_valid.iz
sample_applications/: 002_mortgage_payment_planner.iz  003_compound_interest_projection.iz  004_salary_tax_estimator.iz  005_subscription_break_even.iz  006_freelance_rate_planner.iz  007_inventory_reorder_calculator.iz  008_energy_bill_forecast.iz  009_fleet_fuel_cost_planner.iz  010_trip_budget_optimizer.iz  011_sprint_capacity_planner.iz  012_release_burndown_tracker.iz  013_customer_churn_monitor.iz  014_marketing_roi_estimator.iz  015_startup_runway_analyzer.iz  016_cashflow_guardrail.iz  017_profit_margin_guard.iz  018_warehouse_slot_optimizer.iz  019_staffing_shift_planner.iz  020_invoice_collection_monitor.iz  021_hotel_occupancy_forecaster.iz  022_restaurant_demand_planner.iz  023_clinic_queue_balancer.iz  024_school_tuition_planner.iz  025_campus_shuttle_scheduler.iz  026_event_ticket_revenue_model.iz  027_farmland_yield_forecast.iz  028_irrigation_cycle_planner.iz  029_greenhouse_temperature_model.iz  030_solar_output_estimator.iz  031_wind_farm_capacity_planner.iz  032_water_usage_guard.iz  033_terminal_dashboard_gui.iz  034_logistics_hub_dashboard.iz  035_factory_floor_dashboard.iz  036_service_desk_dashboard.iz  037_airport_ops_dashboard.iz  038_hospital_ops_dashboard.iz  039_data_center_dashboard.iz  040_city_traffic_dashboard.iz  041_carbon_emission_tracker.iz  (+62 more)
std/: io.iz  mem.iz  tui.iz
tests/compile_fail/: effects_missing_prop.iz  effects_violation.iz
tests/compile_pass/: concurrency.iz  macros.iz
tests/contracts/: fail_requires.iz  pass_requires.iz
tests/effects/: fail_pure_boundary.iz  pass_declared_io.iz
tests/run_fail/: runtime_divide_by_zero.iz
tests/run_pass/: effects_basic.iz
tests/run_pass/modules/: main.iz  math.iz
tests/run_pass/stdlib/: io_test.iz  mem_test.iz
tests/snapshots/: integration_suite.snap
tests/tests/: compiler_pipeline.rs
tests/witnesses/: fail_direct_witness.iz  pass_proof_construction.iz
tests/zones/: fail_zone_allocator_scope.iz  pass_zone_allocator.iz
tools/ci/: check_coverage.sh
tools/grammar/tree-sitter-izel/: README.md
tools/grammar/vscode-izel/: README.md  language-configuration.json  package.json
tools/grammar/vscode-izel/syntaxes/: izel.tmLanguage.json
tools/playground/: README.md  index.html  main.js  package-lock.json  package.json  server.js
tools/playground/pkg/: izel_playground.d.ts  izel_playground.js  izel_playground_bg.wasm  izel_playground_bg.wasm.d.ts
tools/playground/wasm/: Cargo.toml
tools/playground/wasm/src/: lib.rs
