[package]
name = "izel_hir"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "High-level Intermediate Representation for Izel."

[dependencies]
izel_ast_lower = { workspace = true }
izel_parser = { workspace = true }
izel_typeck = { workspace = true }
izel_resolve = { workspace = true }
izel_span = { workspace = true }
izel_lexer = { workspace = true }
serde = { workspace = true }
