[package]
name = "izel_lexer"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
izel_span = { path = "../izel_span" }
izel_diagnostics = { path = "../izel_diagnostics" }
tracing = { workspace = true }
serde = { workspace = true, optional = true }

[features]
serde = ["dep:serde", "izel_span/serde"]
