[package]
name = "izel_mir"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
izel_span = { path = "../izel_span" }
izel_lexer = { path = "../izel_lexer" }
izel_parser = { path = "../izel_parser" }
petgraph = { workspace = true }
indexmap = { workspace = true }
