[package]
name = "izel_mir"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
izel_parser = { workspace = true }
izel_span = { workspace = true }
izel_lexer = { workspace = true }
izel_typeck = { workspace = true }
petgraph = "0.6"
indexmap = { workspace = true }
