[package]
name = "izel_session"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
izel_span = { workspace = true }
izel_diagnostics = { workspace = true }
clap = { workspace = true }
serde = { workspace = true, optional = true }

[features]
serde = ["dep:serde", "izel_span/serde"]
