[package]
name = "izel_typeck"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
izel_span = { path = "../izel_span" }
izel_resolve = { path = "../izel_resolve" }
izel_parser = { path = "../izel_parser" }
rustc-hash = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
izel_lexer = { path = "../izel_lexer" }
izel_ast_lower = { path = "../izel_ast_lower" }
