[package]
name = "izel_typeck"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
izel_span = { workspace = true }
izel_resolve = { workspace = true }
izel_parser = { workspace = true }
rustc-hash = { workspace = true }
izel_diagnostics = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
izel_lexer = { workspace = true }
izel_ast_lower = { path = "../izel_ast_lower" }
