[package]
name = "izel_playground"
version = "0.1.0"
edition = "2021"
description = "WASM bridge for the Izel browser playground"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
izel_span = { path = "../../../crates/izel_span" }
izel_lexer = { path = "../../../crates/izel_lexer" }
izel_parser = { path = "../../../crates/izel_parser" }
izel_ast_lower = { path = "../../../crates/izel_ast_lower" }
izel_typeck = { path = "../../../crates/izel_typeck" }

[workspace]
